--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,27 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+
+    mailpit:
+        image: "axllent/mailpit:latest"
+        ports:
+            - "${FORWARD_MAILPIT_PORT:-1025}:1025"
+            - "${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025"
+        networks:
+            - sail
+
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin:latest
+        restart: always
+        environment:
+            PMA_HOST: mysql
+            MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+            UPLOAD_LIMIT: 1000M
+        ports:
+        - "8080:80"
+        networks:
+        - sail        
+
 networks:
     sail:
         driver: bridge
