--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.1.5",
+        "@iconify/vue": "^4.1.2",
+        "@vueuse/core": "^11.1.0",
+        "chart.js": "^4.4.4",
+        "lucide-react": "^0.451.0",
+        "vue-chartjs": "^5.3.1"
     }
 }
